@@ -1,0 +1,37 @@
+Microsoft Visual Studio Solution File, Format Version 8.00
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "gpsim", "gpsim\gpsim.vcproj", "{6747B599-55D9-4224-A04E-AE6D8C33BFEF}"
+	ProjectSection(ProjectDependencies) = postProject
+	EndProjectSection
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "src", "src\src.vcproj", "{6BA847CD-9CDA-49A0-AF7E-B25B1144C9B1}"
+	ProjectSection(ProjectDependencies) = postProject
+	EndProjectSection
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "cli", "cli\cli.vcproj", "{770FEBE4-6F1A-4837-833C-33602556896F}"
+	ProjectSection(ProjectDependencies) = postProject
+	EndProjectSection
+EndProject
+Global
+	GlobalSection(SolutionConfiguration) = preSolution
+		Debug = Debug
+		Release = Release
+	EndGlobalSection
+	GlobalSection(ProjectConfiguration) = postSolution
+		{6747B599-55D9-4224-A04E-AE6D8C33BFEF}.Debug.ActiveCfg = Debug|Win32
+		{6747B599-55D9-4224-A04E-AE6D8C33BFEF}.Debug.Build.0 = Debug|Win32
+		{6747B599-55D9-4224-A04E-AE6D8C33BFEF}.Release.ActiveCfg = Release|Win32
+		{6747B599-55D9-4224-A04E-AE6D8C33BFEF}.Release.Build.0 = Release|Win32
+		{6BA847CD-9CDA-49A0-AF7E-B25B1144C9B1}.Debug.ActiveCfg = Debug|Win32
+		{6BA847CD-9CDA-49A0-AF7E-B25B1144C9B1}.Debug.Build.0 = Debug|Win32
+		{6BA847CD-9CDA-49A0-AF7E-B25B1144C9B1}.Release.ActiveCfg = Release|Win32
+		{6BA847CD-9CDA-49A0-AF7E-B25B1144C9B1}.Release.Build.0 = Release|Win32
+		{770FEBE4-6F1A-4837-833C-33602556896F}.Debug.ActiveCfg = Debug|Win32
+		{770FEBE4-6F1A-4837-833C-33602556896F}.Debug.Build.0 = Debug|Win32
+		{770FEBE4-6F1A-4837-833C-33602556896F}.Release.ActiveCfg = Release|Win32
+		{770FEBE4-6F1A-4837-833C-33602556896F}.Release.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ExtensibilityGlobals) = postSolution
+	EndGlobalSection
+	GlobalSection(ExtensibilityAddIns) = postSolution
+	EndGlobalSection
+EndGlobal
